styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');

/* Navbar */

.bg-body-tertiary {
    background-color: #000324 !important;
}

.navbar-toggler {
    color: white;
}

.navbar a {
    font-family: Dosis;
    color: white;
    margin: 0;
    padding-bottom: 0;
}

.navbar li {
    font-size: small;
    vertical-align: bottom;
    padding-left: 5px;
    padding-right: 5px;
}

.navbar img {
    width: 65%;
}

ul.nav a::hover {
    color: gray !important;
}

/* Header */

.header-image {
    width: 100%;
    height: 450px;

    object-fit: cover;
    object-position: top 100px;
}

.header-text {
    font-family: Dosis;
    width: 50%;
    color: white;
    background-color: rgb(0, 3, 36, 75%);

    position: relative;
    bottom: 325px;
}

.container-height {
    height: 550px;
}

/* Introduction Section */

.intro-text h3 {
    font-family: Dosis;
    font-weight: 300;
    font-size: xx-large;
}

.intro-text p {
    font-family: sans-serif;
    font-size: 0.85rem;
}

.intro-text {
    padding-left: 1px;
}

.image-finest {
    height: 115px;
}

.image-satisfaction {
    height: 115px;
}

.image-genuine {
    height: 115px;
}

.hamster-image {
    width: 275px;
    height: 315px;

    object-fit: cover;
    position: relative;
    left: 65px;
}

.intro-container {
    display: flex;
    justify-content: center;
    width: 1180px;
    padding-bottom: 100px;
}

/* Hotel Rooms Section */

.roomcard-background {
    width: 100%;
    height: 675px;

    object-fit: cover;
    object-position: top 100px;
}

.room-titletext {
    font-family: Dosis;
    font-size: 35px;
    text-align: center;
    color: white;
}

.card-container {
    position: relative;
    bottom: 650px;
}

.card-title {
    font-family: Dosis;
}

.card-secondtitle {
    font-family: sans-serif;
    font-weight: 600;
}

.card-text {
    font-family: sans-serif;
    font-size: 12px;
}

.room-container {
    height: 775px;
}

.btn {
    font-family: sans-serif;
    font-weight: 600;
}

.btn-margin {
    margin-top: 90px;
}

/* Packages Section */

.packages-container {
    width: 1000px;
}

.packages-titletext {
    font-family: Dosis;
    font-size: 35px;
    text-align: center;
    color: black;
}

.packages-images {
    width: 475px;
    height: 265px;

    object-fit: cover;
}

.packages-text-wedding {
    padding-left: 300px;
} 

.packages-title {
    font-family: Dosis;
    font-size: 1.5rem;
    font-weight: 400;
    padding-top: 25px;
}

.packages-subtitle {
    font-family: sans-serif;
    font-weight: 300;
    color: #1F51A8;
    padding-top: 15px;
}

.packages-description {
    font-family: sans-serif;
    padding-top: 15px;
}

/* Amenities Section */

.amenities-container {
    margin-top: 100px;
    height: 700px;
}

.amenities-subcontainer {
    display: block;
    justify-content: center;
    width: 100%;
    position: relative;
    bottom: 535px;
}

.amenities-background {
    width: 1550px;
    height: 600px;

    object-fit: cover;
}

.amenities-title {
    font-family: Dosis;
    text-align: center;
    font-size: 35px;
    color: white;
}

.amenities-description {
    padding-top: 15px;
    font-family: sans-serif;
    text-align: center;
    color: white;
    font-weight: 300;
}

.amenities-images {
    width: 150px;
}

.valet-image {
    width: 95px;
}

.pool-image {
    width: 145px;
}

.amenities-text {
    padding-top: 20px;
    font-family: sans-serif;
    color: white;
    font-weight: 600;
    text-align: center;
}

.amenities-images-placement {
    margin-top: 75px;
}

/* Reservation Section */

.reserve-container {
    width: 1000px;
    margin-bottom: 90px;
}

.reserverow-bg {
    background-color: #000324;
}

.reserve-title {
    font-family: Dosis;
    text-align: center;
    font-size: 35px;
    color: white;
}

.reserve-image {
    width: 100%;
    height: 414px;
    object-fit: cover;
}

.reserve-text {
    font-family: sans-serif;
    color: white;
    font-weight: 200;
    font-size: .85rem;
}

.reserve-input {
    width: 110%;
    height: 31%;
    border-radius: 0%;
    border: 0;
}

.reserve-button {
    width: 154.08px;
    height: 30px;

    position: relative;
    top: 23px;
}

.input-container {
    width: 90%;
}

/* Footer Section */

.footer-bg {
    background-color: #000324;
}

.footer-logo {
    width: 8%;
}

.footer-text {
    font-family: sans-serif;
    color: white;
    font-size: .75rem;
    text-align: center;
}

